src/test/resources/examples/failing/acm-13.t
https://portal.acm.org/citation.cfm?doid=237218.237407

Page numbers with letters and dashes
@inproceedings{Baker:1996:animating:10.1145/237218.237407,
  author = {Baker, James E. and Cruz, Isabel F. and Liotta, Giuseppe and Tamassia, Roberto},
  title = {Animating geometric algorithms over the web},
  booktitle = {Proceedings of the Twelfth Annual Symposium on Computational Geometry},
  series = {SCG~'96},
  location = {Philadelphia, Pennsylvania, USA},
  pages = {C-3--C-4},
  numpages = {2},
  month = may,
  year = {1996},
  publisher = {Association for Computing Machinery},
  address = {New York, NY, USA},
  isbn = {0-89791-804-5},
  doi = {10.1145/237218.237407},
  bib_scrape_url = {https://portal.acm.org/citation.cfm?doid=237218.237407},
}
